--- a/template/default/footer.htm
+++ b/template/default/footer.htm
@@ -3,22 +3,22 @@
     <div class="container">
       <p>免责声明:本站所有内容均来自互联网收集，版权归原作者所有，如果侵犯了你的权益，请通知我们，我们会及时删除侵权内容，谢谢合作！</p>
       <ul class="links">
-        <li> <a href="###/about.html" target="_blank">关于<!--{$site.title}--></a> </li>
+        <li> <a href="javascript:;" data-href="/about.html" target="_blank">关于<!--{$site.title}--></a> </li>
         <li class="muted">·</li>
-        <li> <a href="###/contact.html" target="_blank">联系我们</a> </li>
+        <li> <a href="javascript:;" data-href="/contact.html" target="_blank">联系我们</a> </li>
         <li class="muted">·</li>
-        <li> <a href="###/statement.html" target="_blank">法律声明</a> </li>
+        <li> <a href="javascript:;" data-href="/statement.html" target="_blank">法律声明</a> </li>
         <li class="muted">·</li>
-        <li> <a href="###/service.html" target="_blank">服务条款</a> </li>
+        <li> <a href="javascript:;" data-href="/service.html" target="_blank">服务条款</a> </li>
         <li class="muted">·</li>
-        <li> <a href="###/joinus.html" target="_blank">加入我们</a> </li>
+        <li> <a href="javascript:;" data-href="/joinus.html" target="_blank">加入我们</a> </li>
         <li class="muted">·</li>
-        <li> <a href="###/links.html" target="_blank">友情链接</a> </li>
+        <li> <a href="javascript:;" data-href="/links.html" target="_blank">友情链接</a> </li>
         <li class="muted">·</li>
         <li> <a href="http://www.miibeian.gov.cn/" target="_blank"><!--{$site.icp}--></a> </li>
       </ul>
       <p>&copy;Copyright 2014 All Rights Reserved. Powered By <a href="http://www.idreamsoft.com/" target="_blank">iCMS</a> . </p>
     </div>
   </div>
-<!--{iCMS:public:common}--> 
-<!--{iCMS:public:crontab}--> 
+<!--{iCMS:public:common}-->
+<!--{iCMS:public:crontab}-->
