--- a/template/iCMS/user/home.htm
+++ b/template/iCMS/user/home.htm
@@ -92,11 +92,11 @@
           <h3>统计<span>STATISTICS</span></h3>
         </div>
         <ul>
-          <li><span class="label label-success">今日访问：<!--{$userdata.hits_today}--></span></li>
-          <li><span class="label label-success">昨日访问：<!--{$userdata.hits_yday}--></span></li>
-          <li><span class="label label-info">本周访问：<!--{$userdata.hits_week}--></span></li>
-          <li><span class="label label-info">本月访问：<!--{$userdata.hits_month}--></span></li>
-          <li><span class="label label-inverse">所有访问：<!--{$userdata.hits}--></span></li>
+          <li><span class="label label-success">今日访问：<!--{$user.hits_today}--></span></li>
+          <li><span class="label label-success">昨日访问：<!--{$user.hits_yday}--></span></li>
+          <li><span class="label label-info">本周访问：<!--{$user.hits_week}--></span></li>
+          <li><span class="label label-info">本月访问：<!--{$user.hits_month}--></span></li>
+          <li><span class="label label-inverse">所有访问：<!--{$user.hits}--></span></li>
         </ul>
       </div>
     </div>
