--- a/template/default/article.htm
+++ b/template/default/article.htm
@@ -11,7 +11,7 @@
 </head>
 <body>
   <!--{include file="./header.htm"}-->
-  <div class="l-header-ad"><!--文章顶部横幅通栏 960x60--></div>
+  <!-- <div class="l-header-ad"> 文章顶部横幅通栏 960x60 </div> -->
   <div id="body" class="clearfix">
     <div class="main-col">
       <div id="guide"><strong>当前位置：</strong> <a href="<!--{$site.url}-->">网站首页</a> &nbsp;&raquo;&nbsp;<!--{$category.nav}-->&nbsp;&raquo;&nbsp;<!--{$article.link}-->&nbsp;&raquo;&nbsp;正文</div>
@@ -43,9 +43,6 @@
         </div>
         <blockquote><!--{$article.description}--></blockquote>
         <div class="article-detail">
-          <!--{if $article.pic.url}-->
-          <p class="image"><img class="lazy" src="<!--{$article.pic.url}-->"/></p>
-          <!--{/if}-->
           <div class="l-main-inner-ad"><!--正文内嵌图片广告 250x250--></div>
           <div class="article-body">
             <!--{$article.body}-->
