--- a/template/iCMS/mobile/user/home.htm
+++ b/template/iCMS/mobile/user/home.htm
@@ -62,7 +62,7 @@
         <!--{$iCMS.PAGE.NEXT}-->
     </div>
     <script>
-    iCMS.scrollLoad(".userApp_content",".userApp_day","#pages_next","<!--{$iCMS.PAGE.TOTAL}-->");
+    iCMS.scrollLoad(".userApp_content",".userApp_day","#pages_next",""<!--{$iCMS.PAGE.TOTAL}-->"");
     </script>
     <!--{include file="{iTPL}/footer.htm"}-->
     <script src="<!--{$user.hits_script}-->"></script>
