--- a/template/mobile/category.list.htm
+++ b/template/mobile/category.list.htm
@@ -37,7 +37,7 @@
       </div>
     </div>
     <script>
-    iCMS.scrollLoad("#iCMS-article-list .list","li","#pages_next",<!--{$iCMS.PAGE.TOTAL}-->);
+    iCMS.scrollLoad("#iCMS-article-list .list","li","#pages_next","<!--{$iCMS.PAGE.TOTAL}-->");
     </script>
     <!--{include file="./footer.htm"}-->
   </body>
