--- a/template/mobile/index.htm
+++ b/template/mobile/index.htm
@@ -77,7 +77,7 @@
       </div>
     </div>
     <script>
-    iCMS.scrollLoad("#iCMS-article-list",".panel","#pages_next",<!--{$iCMS.PAGE.TOTAL}-->);
+    iCMS.scrollLoad("#iCMS-article-list",".panel","#pages_next","<!--{$iCMS.PAGE.TOTAL}-->");
     </script>
     <!--{include file="./footer.htm"}-->
   </body>
