--- a/public/ui/iCMS.loginreg-6.0.0.css
+++ b/public/ui/iCMS.loginreg-6.0.0.css
@@ -68,8 +68,8 @@ body { color: #2a2a2a; font-size: 14px; background-color: #f2f2f2; background-im
 .login_wx { background: url(img/login_wx.png) no-repeat left center; width: 53px; height: 21px; }
 .err_uname { visibility: hidden; float: left; margin-top: 19px; margin-left: 12px; *margin-top: 0; _margin-top: 0; }
 .err_uname span { color: #08c !important; font-size: 12px !important; display: block; margin-left: 4px; padding-left: 21px; color: #ff89a7; *padding: 5px 0 2px 21px; *line-height: 30px; _padding: 5px 0 2px 21px; _line-height: 30px; }
-.err_pass, .login_wrap .err_seccode { visibility: hidden; float: left; margin-top: 25px; margin-left: 12px; *margin-top: 21px; _margin-top: 21px; }
-.err_pass span, .login_wrap .err_seccode span { color: #08c !important; font-size: 12px !important; margin-left: 4px; padding-top: 1px; padding-left: 21px; color: #ff89a7; *padding: 5px 0 2px 21px; *line-height: 30px; _padding: 5px 0 2px 21px; _line-height: 30px; }
+.err_pass,.err_seccode { visibility: hidden; float: left; margin-top: 25px; margin-left: 12px; *margin-top: 21px; _margin-top: 21px; }
+.err_pass span,.err_seccode span { color: #08c !important; font-size: 12px !important; margin-left: 4px; padding-top: 1px; padding-left: 21px; color: #ff89a7; *padding: 5px 0 2px 21px; *line-height: 30px; _padding: 5px 0 2px 21px; _line-height: 30px; }
 /* Footer
 -------------------------------------------------- */
 #footer { margin-top: 20px; padding: 10px 0; width: 100%; border-top: 1px solid #e5e5e5; background-color: #f5f5f5; text-align: center; }
