--- a/template/mobile/category.index.htm
+++ b/template/mobile/category.index.htm
@@ -70,7 +70,7 @@
       </div>
     </div>
     <script>
-    iCMS.scrollLoad("#iCMS-article-list .list","li","#pages_next",<!--{$iCMS.PAGE.TOTAL}-->);
+    iCMS.scrollLoad("#iCMS-article-list .list","li","#pages_next","<!--{$iCMS.PAGE.TOTAL}-->");
     </script>
     <!--{include file="./footer.htm"}-->
   </body>
